# CMakeTemplate

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/CoreExample/: CMakeLists.txt
src/CoreExample/LibExample/: CMakeLists.txt  LibExample.cpp  LibExample.hpp
src/ExecExample/: CMakeLists.txt  Main.cpp
